--- a/hz903/index.html
+++ b/hz903/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>曼城小站</title>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/black-ops-one:n4:default;dawning-of-a-new-day:n4:default;acme:n4:default.js" type="text/javascript"></script>
 
 <style type="text/css">
 body {
-	background-color: #8ECEF4;
+    background-color: #8ECEF4;
+    font-family: "黑体";
 }
 </style>
 </head>
@@ -43,10 +44,14 @@ body {
       <td colspan="2" align="center"><h2 style="font-family: '微软雅黑'; font-style: normal; font-weight: 400; font-size: 30px; color: #13283D;">Mancherster City Football Club</h2></td>
     </tr>
     <tr>
-      <td colspan="2" bgcolor="#A9DAF7">        <blockquote>
+      <td rowspan="2" bgcolor="#A9DAF7">        <blockquote>
           <p style="font-family: '黑体';">&nbsp;中文名为曼彻斯特足球俱乐部，简称为曼城俱乐部。球迷一般将其叫为曼城，自称为城迷或城民，源于英国球迷自称的Citizen;<br>
-          而因为球队队徽酷似圆月，因而也被叫作蓝月亮，这其中也有beady eyes乐队所作的队歌<a href="web/music.html">Blue Moon</a>的影响。</p>
+          而因为球队队徽酷似圆月，因而也被叫作蓝月亮，这其中也有<a href="web/Beady eyes.html">Beady eyes</a>乐队所作的队歌<a href="web/music.html">Blue Moon</a>的影响。</p>
       </blockquote>      </td>
+      <td align="center" bgcolor="#A9DAF7" style="font-size: 20px;"><a href="web/Beady eyes.html">Beady eyes</a>乐队</td>
+    </tr>
+    <tr>
+      <td bgcolor="#A9DAF7"><a href="web/Beady eyes.html"><img src="image/2013Albumsof20131.BEADY-AWH-00019.jpg" width="421" height="262" alt=""/></a></td>
     </tr>
     <tr>
       <td colspan="2" align="center"><h3 style="color: #4C74A7; font-family: '微软雅黑';">球队简介</h3></td>
