--- a/hz903/index.html
+++ b/hz903/index.html
@@ -10,7 +10,8 @@
 <style type="text/css">
 body {
     background-color: #8ECEF4;
-    font-family: "黑体";
+    font-family: "微软雅黑";
+    font-size: 18px;
 }
 </style>
 </head>
@@ -51,7 +52,7 @@ body {
       <td align="center" bgcolor="#A9DAF7" style="font-size: 20px;"><a href="web/Beady eyes.html">Beady eyes</a>乐队</td>
     </tr>
     <tr>
-      <td bgcolor="#A9DAF7"><a href="web/Beady eyes.html"><img src="image/2013Albumsof20131.BEADY-AWH-00019.jpg" width="421" height="262" alt=""/></a></td>
+      <td bgcolor="#A9DAF7"><a href="web/Beady eyes.html"><img src="image/2013Albumsof20131.BEADY-AWH-00019.jpg" width="485" height="284" alt=""/></a></td>
     </tr>
     <tr>
       <td colspan="2" align="center"><h3 style="color: #4C74A7; font-family: '微软雅黑';">球队简介</h3></td>
@@ -60,32 +61,32 @@ body {
       <td height="110" align="center" bgcolor="#A9DAF7"><blockquote>
         <p style="font-family: '黑体'; font-size: 36px;"><img src="image/t01629a7a3b8dacb2b2.png" width="72" height="70" alt=""/>FROM 1880</p>
       </blockquote></td>
-      <td rowspan="2" align="left"><img src="image/BB1mFESX.jpg" width="284" height="338" alt=""/></td>
+      <td rowspan="2" align="left"><img src="image/BB1mFESX.jpg" width="484" height="441" alt=""/></td>
     </tr>
     <tr>
       <td align="left" bgcolor="#A9DAF7"><blockquote>
-        <p><span style="font-family: '黑体'">曼城俱乐部曾在过去的七年间六夺英超冠军，其中包含了一次历史唯一的四连冠和一次三冠王，不可谓不辉煌。<br>
-          球队在被城市足球集团收购后真正进入辉煌期，早年间并未取得突出成就，所以并不属于英超传统豪门之一，但是英超新兴豪门的代表与运营典范。</span></p>
+        <p>曼城俱乐部曾在过去的七年间六夺英超冠军，其中包含了一次历史唯一的四连冠和一次三冠王，不可谓不辉煌。<br>
+          球队在被城市足球集团收购后真正进入辉煌期，早年间并未取得突出成就，所以并不属于英超传统豪门之一，但是英超新兴豪门的代表与运营典范。</p>
       </blockquote></td>
     </tr>
     <tr>
       <td colspan="2" align="center"><h3 style="color: #4C74A7; font-family: '微软雅黑';">队员简介</h3></td>
     </tr>
     <tr>
-      <td width="985" height="161" bgcolor="#A9DAF7"><blockquote>
+      <td width="524" height="250" bgcolor="#A9DAF7" style="font-family: '微软雅黑'"><blockquote>
         <p><span style="font-family: '黑体'"> 球队早期主要依靠孔帕尼，大卫席尔瓦和阿圭罗等，组成了具备争冠实力的第一套班底；<br>
           在瓜迪奥拉执掌教鞭后，引入了罗德里，德布劳内等一众传奇球员，且自身青训逐渐获得产出，福登，阿尔瓦雷斯，鲍勃等一众小将表现卓越，逐渐有争霸趋势；<br>
           最终在哈兰德，格拉利什等巨星来投之后，球队进入了历史上最辉煌的时刻，不仅在英国，更是在整个欧洲，表现出了统治级别的实力。</span><br>
         </p>
       </blockquote></td>
-      <td width="14" rowspan="2" align="left"><img src="image/ec1955c7-16f9-4b8c-9ef0-a6f0dc78fbea.jpg" width="274" height="283" alt=""/></td>
+      <td width="475" rowspan="2" align="left"><img src="image/ec1955c7-16f9-4b8c-9ef0-a6f0dc78fbea.jpg" width="483" height="471" alt=""/></td>
     </tr>
-    <tr align="center">
+    <tr align="center" style="font-family: '微软雅黑'">
       <td height="133" bgcolor="#A9DAF7"><blockquote>
-        <p><span style="font-family: '黑体'">锋线名将：哈兰德，阿圭罗等；<br>        
-          &nbsp;&nbsp;&nbsp;&nbsp;中场：德布劳内，罗德里，大卫席尔瓦；<br>        
-          &nbsp;&nbsp;&nbsp;后卫：孔帕尼，斯通斯，鲁本迪亚斯；<br>      
-          &nbsp;门将：埃德森，奥尔特加，卡森；</span><br>
+        <p><span style="font-family: '微软雅黑'">锋线名将：哈兰德，阿圭罗等；<br>        
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中场：德布劳内，罗德里，大卫席尔瓦；<br>        
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;后卫：孔帕尼，斯通斯，鲁本迪亚斯；<br>      
+          &nbsp;&nbsp;&nbsp;门将：埃德森，奥尔特加，卡森；</span><br>
           </p>
       </blockquote></td>
     </tr>
