--- a/hz903/web/Beady eyes.html
+++ b/hz903/web/Beady eyes.html
@@ -34,7 +34,7 @@ body {
 <table width="1000" border="1" align="center">
   <tbody>
     <tr>
-      <td colspan="2" style="font-family: '微软雅黑'; font-size: 20px;">Beady eyes 乐队并不是曼城球迷群体中最知名的乐队，乐队的主唱<a href="https://baike.baidu.com/item/Liam Gallagher/0?fromModule=lemma_inlink" target="_blank" data-from-module="summary">Liam Gallagher</a>实际上是英国传奇乐队Oasis前主唱，在Oasis解散后与其他前Oasis成员共同组建，作为曼城死忠乐队的精神延续，主唱也毫无疑问是曼城球迷圈一呼百应的传奇人物。</td>
+      <td colspan="2" bgcolor="#A9DAF7" style="font-family: '微软雅黑'; font-size: 20px;">Beady eyes 乐队并不是曼城球迷群体中最知名的乐队，乐队的主唱<a href="https://baike.baidu.com/item/Liam Gallagher/0?fromModule=lemma_inlink" target="_blank" data-from-module="summary">Liam Gallagher</a>实际上是英国传奇乐队Oasis前主唱，在Oasis解散后与其他前Oasis成员共同组建，作为曼城死忠乐队的精神延续，主唱也毫无疑问是曼城球迷圈一呼百应的传奇人物。</td>
     </tr>
     <tr>
       <td colspan="2" align="center" style="font-family: '黑体'; font-size: 18px;"><strong>Liam Gallagher</strong></td>
@@ -51,11 +51,11 @@ body {
       <td colspan="2" align="center" style="font-family: '微软雅黑'; font-size: 20px;"><strong>Oasis绿洲乐队</strong></td>
     </tr>
     <tr>
-      <td colspan="2" align="center" style="font-family: '微软雅黑'; font-size: 20px;">作为英国摇滚的绝对传奇，oasis乐队名曲无数，曾一度称霸英陆，歌曲历经三十余年，仍传唱不绝，代表作有《Don't look back in anger》，《Whatever》，《Wonderwall》,《Live Forever》等。首专《Definitely Maybe》更是摇滚乐迷不可不听的经典，如果你是个没听过Oasis的曼城球迷或者摇滚乐迷，那就taxi了。</td>
+      <td colspan="2" align="center" bgcolor="#A9DAF7" style="font-family: '微软雅黑'; font-size: 20px;">作为英国摇滚的绝对传奇，oasis乐队名曲无数，曾一度称霸英陆，歌曲历经三十余年，仍传唱不绝，代表作有《Don't look back in anger》，《Whatever》，《Wonderwall》,《Live Forever》等。首专《Definitely Maybe》更是摇滚乐迷不可不听的经典，如果你是个没听过Oasis的曼城球迷或者摇滚乐迷，那就taxi了。</td>
     </tr>
     <tr>
-      <td width="497" align="center" style="font-family: '微软雅黑'; font-size: 20px;"><img src="../image/2125038.jpg" width="522" height="305" alt=""/></td>
-      <td width="607" align="center" style="font-family: '微软雅黑'; font-size: 20px;"><img src="../image/Oasis-1.jpg" width="318" height="307" alt=""/></td>
+      <td width="497" align="center" bgcolor="#A9DAF7" style="font-family: '微软雅黑'; font-size: 20px;"><img src="../image/2125038.jpg" width="522" height="305" alt=""/></td>
+      <td width="607" align="center" bgcolor="#A9DAF7" style="font-family: '微软雅黑'; font-size: 20px;"><img src="../image/Oasis-1.jpg" width="318" height="307" alt=""/></td>
     </tr>
   </tbody>
 </table>
