--- a/hz903/web/1965duihui.html
+++ b/hz903/web/1965duihui.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<img src="../image/rBUESWJdUpyAD56hAAUVJgSCqoA090.jpg" width="740" height="1196" alt=""/>
+<a href="History.html"><img src="../image/rBUESWJdUpyAD56hAAUVJgSCqoA090.jpg" width="740" height="1196" alt=""/></a>
 </body>
 </html>
