--- a/hz903/web/Players.html
+++ b/hz903/web/Players.html
@@ -15,7 +15,7 @@ body {
 <table width="1013" border="1" align="center">
   <tbody>
     <tr>
-      <td colspan="6"><img src="../image/5819964.jpg" width="1000" height="562" alt=""/></td>
+      <td colspan="6"><a href="../index.html"><img src="../image/5819964.jpg" width="1000" height="562" alt=""/></a></td>
     </tr>
     <tr>
       <td width="103" height="23" align="center" style="font-style: inherit; font-weight: 400; font-family: '黑体';"><a href="https://fiy-pc.github.io/dorm_website/" target="new">宿舍首页</a></td>
