--- a/hz903/index.html
+++ b/hz903/index.html
@@ -18,6 +18,29 @@ body {
 
 <body>
 <audio src="Blue moon.mp3" loop="loop" controls="controls" autoplay="autoplay"></audio>
+<script>
+  var music = document.getElementById("music");
+  var currentTime = 0;
+
+  // 监听音乐播放事件
+  music.addEventListener("timeupdate", function() {
+    currentTime = music.currentTime;
+  });
+
+  // 监听页面离开事件
+  window.addEventListener("beforeunload", function() {
+    sessionStorage.setItem("currentTime", currentTime);
+  });
+
+  // 监听页面加载事件
+  window.addEventListener("load", function() {
+    var storedTime = sessionStorage.getItem("currentTime");
+    if (storedTime) {
+      music.currentTime = parseFloat(storedTime);
+      music.play();
+    }
+  });
+</script>
 <span style="font-size: 10px"></span>
 <table width="1013" border="1" align="center">
   <tbody>
